[project]
name = "ccb"
version = "1.0.0"
description = "Convert to Comic Book - 将图片文件夹或压缩包转换为漫画书格式"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
standard = []
full = [
    "rarfile>=4.0",
    "py7zr>=0.21.0",
]

[project.scripts]
ccb = "ccb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ccb"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
